# moezip

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  ans.cpp  ans.hpp  api.cpp  bindings.cpp  codec.cpp  codec.hpp  embedded_assets.hpp  main.cpp  make.py  moezip.pyi  pyproject.toml  router.cpp  router.hpp  router_stateless_v4.json  setup.py  tokenizer.cpp  tokenizer.hpp  vocab.cpp  vocab.hpp  words_final.txt
.github/workflows/: wheels.yml
