[build-system]
requires = ["setuptools>=61.0", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Build for Python 3.8 through 3.13
build = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*i686* *ppc64le* *s390x*"

# Linux C++20 container images
[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

# macOS C++20 deployment target
[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }